--- a/deploy/kubernetes/complete-demo.yaml
+++ b/deploy/kubernetes/complete-demo.yaml
@@ -68,7 +68,7 @@ spec:
         - name: ocirsecret    
       containers:
       - name: carts
-        image: phx.ocir.io/intvravipati/mushop/cart:0.0.1
+        image: phx.ocir.io/intvravipati/mushop/carts:0.0.3
         ports:
          - containerPort: 8080
         env:
@@ -258,7 +258,7 @@ spec:
         - name: ocirsecret    
       containers:
       - name: orders
-        image: phx.ocir.io/intvravipati/mushop/orders:0.0.3
+        image: phx.ocir.io/intvravipati/mushop/orders:0.0.4
         env:
          - name: ZIPKIN
            value: zipkin.jaeger.svc.cluster.local
@@ -385,7 +385,7 @@ spec:
       imagePullSecrets:
         - name: ocirsecret    
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/queuemaster:0.0.2
+      - image: phx.ocir.io/intvravipati/mushop/queuemaster:0.0.4
         name: queuemaster
         env:
          - name: TENANT_ID
@@ -433,9 +433,9 @@ metadata:
   namespace: mushop
 spec:
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
     nodePort: 30124
   selector:
     run: queuemaster
@@ -461,7 +461,7 @@ spec:
       imagePullSecrets:
         - name: ocirsecret        
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/shipping:0.0.2
+      - image: phx.ocir.io/intvravipati/mushop/shipping:0.0.4
         name: ship
         env:
          - name: TENANT_ID
@@ -495,7 +495,7 @@ spec:
               name: streams-secret
               key: compartment_id
         ports:
-        - containerPort: 8080
+        - containerPort: 80
           protocol: TCP
 ---
 apiVersion: v1
@@ -507,10 +507,10 @@ metadata:
   namespace: mushop
 spec:
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
-    targetPort: 8080
-    nodePort: 30123
+    targetPort: 80
+    #nodePort: 30123
   selector:
     run: ship
   type: NodePort
