--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -48,7 +48,7 @@ services:
         - OADB_PW=default_Password1
         - OADB_SERVICE=mcatalogue_tp
   carts:
-    image: phx.ocir.io/intvravipati/mushop/carts:0.0.4
+    image: phx.ocir.io/intvravipati/mushop/carts:latest
     ports:
      - 8086:80
     hostname: carts
@@ -61,9 +61,9 @@ services:
     tmpfs:
       - /tmp:rw,noexec,nosuid
     environment:
-      - OADB_SERVICE=db3_tp
-      - OADB_USER=ADMIN
-      - OADB_PW=Welcome123$$$$$$
+      - OADB_USER=carts_user
+      - OADB_PW=Default_Password123#
+      - OADB_SERVICE=mcarts_tp
       - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
   orders:
     image: phx.ocir.io/intvravipati/mushop/orders:latest
