--- a/deploy/docker-compose.wip.yml
+++ b/deploy/docker-compose.wip.yml
@@ -48,39 +48,42 @@ services:
 
   # OCI Carts service
   carts:
-    image: phx.ocir.io/intvravipati/mushop/cart:0.0.2
-    hostname: carts
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
-    environment:
-      - JDBC_URL=jdbc:oracle:thin:@db3_tp?TNS_ADMIN=./config
-      - DB_USER=ADMIN
-      - DB_PASSWORD=Welcome123$$$$$$
-      - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-  
+      image: phx.ocir.io/intvravipati/mushop/carts:1.0.0
+      ports:
+      - 8086:80
+      hostname: carts
+      restart: always
+      cap_drop:
+        - all
+      cap_add:
+        - NET_BIND_SERVICE
+      read_only: true
+      tmpfs:
+        - /tmp:rw,noexec,nosuid
+      environment:
+        - OADB_USER=carts_user
+        - OADB_PW=Default_Password123#
+        - OADB_SERVICE=mcarts_tp
+        - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
   # OCI Orders service
   orders:
-    image: phx.ocir.io/intvravipati/mushop/orders:0.0.3
-    hostname: orders
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
-    environment:
-      - JDBC_URL=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
-      - DB_USER=ADMIN
-      - DB_PASSWORD=Welcome123$$$$$$
-      - JAVA_OPTS=-Xms128m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+      image: phx.ocir.io/intvravipati/mushop/orders:1.0.0
+      ports:
+      - 8085:80
+      hostname: orders
+      restart: always
+      cap_drop:
+        - all
+      cap_add:
+        - NET_BIND_SERVICE
+      read_only: true
+      tmpfs:
+        - /tmp:rw,noexec,nosuid
+      environment:
+        - OADB_USER=orders_user
+        - OADB_PW=Default_Password123#
+        - OADB_SERVICE=morders_tp
+        - JAVA_OPTS=-Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
 
   shipping:
     image: weaveworksdemos/shipping
