--- a/deploy/kubernetes/complete-demo.yaml
+++ b/deploy/kubernetes/complete-demo.yaml
@@ -388,36 +388,36 @@ spec:
       - image: phx.ocir.io/intvravipati/mushop/queuemaster:0.0.4
         name: queuemaster
         env:
-         - name: TENANT_ID
+         - name: OCI_TENANT_ID
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: tenant_id
-         - name: USER_ID
+              key: oci_tenant_id
+         - name: OCI_USER_ID
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: user_id
-         - name: FINGERPRINT
+              key: oci_user_id
+         - name: OCI_FINGERPRINT
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: fingerprint
+              key: oci_fingerprint
          - name: OCI_API_KEY
            valueFrom:
              secretKeyRef:
               name: streams-secret
               key: oci_api_key
-         - name: REGION
+         - name: OCI_REGION
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: region
-         - name: COMPARTMENT_ID
+              key: oci_region
+         - name: OCI_COMPARTMENT_ID
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: compartment_id
+              key: oci_compartment_id
         ports:
         - containerPort: 8080
           protocol: TCP
@@ -464,36 +464,36 @@ spec:
       - image: phx.ocir.io/intvravipati/mushop/shipping:0.0.4
         name: ship
         env:
-         - name: TENANT_ID
+         - name: OCI_TENANT_ID
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: tenant_id
-         - name: USER_ID
+              key: oci_tenant_id
+         - name: OCI_USER_ID
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: user_id
-         - name: FINGERPRINT
+              key: oci_user_id
+         - name: OCI_FINGERPRINT
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: fingerprint
+              key: oci_fingerprint
          - name: OCI_API_KEY
            valueFrom:
              secretKeyRef:
               name: streams-secret
               key: oci_api_key
-         - name: REGION
+         - name: OCI_REGION
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: region
-         - name: COMPARTMENT_ID
+              key: oci_region
+         - name: OCI_COMPARTMENT_ID
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: compartment_id
+              key: oci_compartment_id
         ports:
         - containerPort: 80
           protocol: TCP
