api fixes for proper session and cart persistence

--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -18,6 +18,7 @@ COPY . .
 
 # Prune
 RUN rm -rf test scripts
+RUN npm prune --production
 
 ###############################
 #      Runtime (node/npm)     #
