--- a/deploy/kubernetes/complete-demo.yaml
+++ b/deploy/kubernetes/complete-demo.yaml
@@ -369,24 +369,24 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    run: queuemaster
-  name: queuemaster
+    run: stream
+  name: stream
   namespace: mushop
 spec:
   replicas: 1
   selector:
     matchLabels:
-      run: queuemaster
+      run: stream
   template:
     metadata:
       labels:
-        run: queuemaster
+        run: stream
     spec:
       imagePullSecrets:
         - name: ocirsecret    
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/queuemaster:0.0.4
-        name: queuemaster
+      - image: phx.ocir.io/intvravipati/mushop/stream:0.0.1
+        name: stream
         env:
          - name: OCI_TENANT_ID
            valueFrom:
@@ -426,8 +426,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: queuemaster
-  name: queuemaster
+    run: stream
+  name: stream
   annotations:
     prometheus.io/path: "/prometheus"
   namespace: mushop
@@ -436,9 +436,9 @@ spec:
   - port: 80
     protocol: TCP
     targetPort: 80
-    nodePort: 30124
+    #nodePort: 30124
   selector:
-    run: queuemaster
+    run: stream
   type: NodePort
 ---
 apiVersion: extensions/v1beta1
