--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     environment:
       - reschedule=on-node-failure
 
+  # Storefront application middleware
   api:
     image: phx.ocir.io/intvravipati/mushop/api:1
     hostname: api
@@ -29,25 +30,6 @@ services:
     environment:
       - reschedule=on-node-failure
       - SESSION_REDIS=session-db
-
-  # Storefront backend API service
-  storefront:
-    image: phx.ocir.io/intvravipati/mushop/storefront:1
-    hostname: storefront
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-      - CHOWN
-      - SETGID
-      - SETUID
-      - DAC_OVERRIDE
-    read_only: false
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
-    environment:
-      - reschedule=on-node-failure
 
   # Redis session DB
   session-db:
@@ -63,6 +45,25 @@ services:
       - SETUID
       - DAC_OVERRIDE
     read_only: true
+    tmpfs:
+      - /tmp:rw,noexec,nosuid
+    environment:
+      - reschedule=on-node-failure
+
+  # Storefront backend API service
+  storefront:
+    image: phx.ocir.io/intvravipati/mushop/storefront:1
+    hostname: storefront
+    restart: always
+    cap_drop:
+      - all
+    cap_add:
+      - NET_BIND_SERVICE
+      - CHOWN
+      - SETGID
+      - SETUID
+      - DAC_OVERRIDE
+    read_only: false
     tmpfs:
       - /tmp:rw,noexec,nosuid
     environment:
@@ -124,7 +125,7 @@ services:
       - OADB_SERVICE=morders_tp
       - JAVA_OPTS=-Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
 
-  # Shipping service - OCI Stream
+  # Shipping service
   shipping:
     image: phx.ocir.io/intvravipati/mushop/shipping:0.0.4
     hostname: shipping
@@ -143,7 +144,7 @@ services:
       - OCI_FINGERPRINT
       - OCI_API_KEY
   
-  # OCI Queue
+  # OCI Stream
   queuemaster:
     image: phx.ocir.io/intvravipati/mushop/queuemaster:0.0.3
     hostname: queuemaster
