Updates for packaging - exposed stub_status on 8080 - updated dev compose services - moved static to build arg

--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -40,5 +40,9 @@
     "imagemin-pngquant": "^6.0.0",
     "jest": "^24.8.0",
     "webpack-stream": "^5.2.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not ie <= 9"
+  ]
 }
