--- a/src/storefront/test/Dockerfile
+++ b/src/storefront/test/Dockerfile
@@ -20,4 +20,8 @@ COPY package.json /tmp/
 RUN cd /tmp && npm install
 RUN mkdir -p /usr/src/app && cp -a /tmp/node_modules /usr/src/app/
 
+ARG STATIC_ASSET_URL
+ENV STATIC_ASSET_URL ${STATIC_ASSET_URL:-"https://objectstorage.us-phoenix-1.oraclecloud.com/n/intvravipati/b/mushop-images/o/"}
+ENV NODE_ENV "development"
+
 WORKDIR /usr/src/app
