--- a/src/storefront/test/docker-compose.yml
+++ b/src/storefront/test/docker-compose.yml
@@ -1,111 +1,50 @@
-version: '2'
+version: '3'
 
 services:
 
   # Storefront backend API service
   api:
-    image: phx.ocir.io/intvravipati/mushop/api:0.0.2
+    image: phx.ocir.io/intvravipati/mushop/api:1
     hostname: api
     restart: always
     ports:
       - '8080:3000'
     environment:
-      - PORT=3000
       - reschedule:on-node-failure
+      - PORT=3000
   
   # OCI Catalog service
   catalogue:
     image: phx.ocir.io/intvravipati/mushop/catalogue:0.0.1
     hostname: catalogue
     restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
     environment:
       - reschedule=on-node-failure
       - OADB_USER=catalogue_user
       - OADB_PW=default_Password1
       - OADB_SERVICE=mcatalogue_tp
 
-  # legacy catalogue
-  # catalogue:
-  #   image: weaveworksdemos/catalogue
-  #   hostname: catalogue
-  #   restart: always
-  #   environment:
-  #     - reschedule:on-node-failure
-  # catalogue-db:
-  #   image: weaveworksdemos/catalogue-db
-  #   hostname: catalogue-db
-  #   restart: always
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=""
-  #     - MYSQL_ALLOW_EMPTY_PASSWORD=true
-  #     - MYSQL_DATABASE=socksdb
-
   carts:
-    image: phx.ocir.io/intvravipati/mushop/carts:0.0.3
+    image: phx.ocir.io/intvravipati/mushop/carts:1.0.0
     hostname: carts
     restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
     environment:
-      - JDBC_URL=jdbc:oracle:thin:@db3_tp?TNS_ADMIN=./config
-      - DB_USER=ADMIN
-      - DB_PASSWORD=Welcome123$$$$$$
-      - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+      - reschedule:on-node-failure
+      - OADB_USER=carts_user
+      - OADB_PW=Default_Password123#
+      - OADB_SERVICE=mcarts_tp
+      - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
   
   orders:
-    image: phx.ocir.io/intvravipati/mushop/orders:0.0.4
+    image: phx.ocir.io/intvravipati/mushop/orders:1.0.0
     hostname: orders
     restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
     environment:
-      - JDBC_URL=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
-      - DB_USER=ADMIN
-      - DB_PASSWORD=Welcome123$$$$$$
-      - JAVA_OPTS=-Xms128m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-  
-  # legacy carts
-  # carts:
-  #   image: weaveworksdemos/carts
-  #   hostname: carts
-  #   restart: always
-  #   environment:
-  #     - reschedule:on-node-failure
-  # carts-db:
-  #   image: mongo
-  #   hostname: carts-db
-  #   restart: always
-  #   environment:
-  #     - reschedule:on-node-failure
-  
-  # legacy orders
-  # orders:
-  #   image: weaveworksdemos/orders
-  #   hostname: orders
-  #   restart: always
-  #   environment:
-  #     - reschedule:on-node-failure
-  # orders-db:
-  #   image: mongo
-  #   hostname: orders-db
-  #   restart: always
-  #   environment:
-  #     - reschedule:on-node-failure
+      - reschedule:on-node-failure
+      - OADB_USER=orders_user
+      - OADB_PW=Default_Password123#
+      - OADB_SERVICE=morders_tp
+      - JAVA_OPTS=-Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
 
   shipping:
     image: weaveworksdemos/shipping
@@ -127,27 +66,25 @@ services:
     restart: always
     environment:
       - reschedule:on-node-failure
+
   payment:
-    image: weaveworksdemos/payment
+    image: phx.ocir.io/intvravipati/mushop/payment:0.0.1
     hostname: payment
     restart: always
     environment:
       - reschedule:on-node-failure
-    entrypoint:
-      - /app
-    command:
-      - -port=80
-      - -decline=999
+
   user:
-    image: weaveworksdemos/user
+    image: phx.ocir.io/intvravipati/mushop/user:0.0.1
     hostname: user
     restart: always
     environment:
+      - reschedule:on-node-failure
       - MONGO_HOST=user-db:27017
-      - reschedule=on-node-failure
+
   user-db:
-    image: weaveworksdemos/user-db
+    image: phx.ocir.io/intvravipati/mushop/user-db:0.0.1
     hostname: user-db
     restart: always
     environment:
-      - reschedule=on-node-failure
+      - reschedule:on-node-failure
