--- a/src/storefront/Dockerfile
+++ b/src/storefront/Dockerfile
@@ -26,8 +26,10 @@ RUN rm -rf /tmp/node_modules
 # copy source and build
 WORKDIR /usr/src/app
 COPY . .
+
+ARG STATIC_ASSET_URL
+ENV STATIC_ASSET_URL ${STATIC_ASSET_URL:-"https://objectstorage.us-phoenix-1.oraclecloud.com/n/intvravipati/b/mushop-images/o/"}
 ENV NODE_ENV "production"
-ENV STATIC_ASSET_URL "https://objectstorage.us-phoenix-1.oraclecloud.com/n/intvravipati/b/mushop-images/o/"
 RUN npm run build
 
 ###############################
@@ -37,3 +39,5 @@ FROM nginx:alpine as web
 
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
+
+EXPOSE 8080
