--- a/src/storefront/nginx/default.conf
+++ b/src/storefront/nginx/default.conf
@@ -1,3 +1,11 @@
+# expose metrics
+server {
+    listen       8080;
+    server_name  localhost;
+    stub_status;
+}
+
+# expose static server
 server {
     listen       80;
     server_name  localhost;
