--- a/deploy/kubernetes/ingress/mushop-ingress.yaml
+++ b/deploy/kubernetes/ingress/mushop-ingress.yaml
@@ -4,10 +4,17 @@ metadata:
   name: mushop-ingress
   namespace: mushop
   annotations:
+    ingress.kubernetes.io/ssl-redirect: "false"
     kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+  - hosts:
+    - mushop.ateam.cloud
+    secretName: mushop-tls-prod-secret
   rules:
-  - host: 'mushop.ateam.cloud'
+  - host: mushop.ateam.cloud
     http:
       paths:
       - path: /api
