Updates to run storefront nginx as nonRoot

--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -62,8 +62,7 @@ services:
       - CHOWN
       - SETGID
       - SETUID
-      - DAC_OVERRIDE
-    read_only: false
+    read_only: true
     tmpfs:
       - /tmp:rw,noexec,nosuid
     environment:
