--- a/deploy/kubernetes/manifests/storefront-dep.yaml
+++ b/deploy/kubernetes/manifests/storefront-dep.yaml
@@ -23,9 +23,9 @@ spec:
         imagePullPolicy: Always
         ports:
         - name: http
-          containerPort: 80
-        - name: status
           containerPort: 8080
+        - name: status
+          containerPort: 8888
         resources:
           limits:
             cpu: 300m
@@ -34,6 +34,8 @@ spec:
             cpu: 100m
             memory: 300Mi
         securityContext:
+          runAsNonRoot: true
+          runAsUser: 10001
           capabilities:
             drop:
               - all
@@ -42,8 +44,7 @@ spec:
               - CHOWN
               - SETGID
               - SETUID
-              - DAC_OVERRIDE
-          readOnlyRootFilesystem: false
+          readOnlyRootFilesystem: true
         livenessProbe:
           httpGet:
             path: /
@@ -52,3 +53,10 @@ spec:
           httpGet:
             path: /
             port: http
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp-volume
+      volumes:
+        - name: tmp-volume
+          emptyDir:
+            medium: Memory
