--- a/src/storefront/Dockerfile
+++ b/src/storefront/Dockerfile
@@ -37,7 +37,9 @@ RUN npm run build
 ###############################
 FROM nginx:alpine as web
 
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 
 EXPOSE 8080
+EXPOSE 8888
