--- a/deploy/kubernetes/ingress/mushop-ingress.yaml
+++ b/deploy/kubernetes/ingress/mushop-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mushop-ingress
   namespace: mushop
   annotations:
-    ingress.kubernetes.io/ssl-redirect: "false"
+    ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
@@ -15,17 +15,6 @@ spec:
     secretName: mushop-tls-prod-secret
   rules:
   - host: mushop.ateam.cloud
-    http:
-      paths:
-      - path: /api
-        backend:
-          serviceName: api
-          servicePort: 80
-      - path: /
-        backend:
-          serviceName: storefront
-          servicePort: 80
-  - host: '*.mushop.ateam.cloud'
     http:
       paths:
       - path: /api
