--- a/src/storefront/nginx/default.conf
+++ b/src/storefront/nginx/default.conf
@@ -35,6 +35,12 @@ server {
         index  index.html index.htm;
     }
 
+    location /images/ {
+        expires 1h;
+        add_header Cache-Control "public, no-transform";
+        root   /usr/share/nginx/html;
+    }
+
     error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
