--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mushop-storefront",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "MuShop eCommerce demo",
   "scripts": {
     "start": "gulp",
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.0.1",
+    "echarts": "^4.2.1",
     "uikit": "^3.1.4"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.5",
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.7",
     "del": "^3.0.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
