--- a/deploy/kubernetes/ingress/mushop-ingress.yaml
+++ b/deploy/kubernetes/ingress/mushop-ingress.yaml
@@ -10,11 +10,23 @@ metadata:
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
-  - hosts:
+  - secretName: mushop-tls-prod-secret 
+    hosts:
     - mushop.ateam.cloud
-    secretName: mushop-tls-prod-secret
+    - store.mushop.ateam.cloud
   rules:
   - host: mushop.ateam.cloud
+    http:
+      paths:
+      - path: /api
+        backend:
+          serviceName: api
+          servicePort: 80
+      - path: /
+        backend:
+          serviceName: storefront
+          servicePort: 80
+  - host: store.mushop.ateam.cloud
     http:
       paths:
       - path: /api
