Renamed combined-descriptors to mushop; added security stuff back

--- a/deploy/kubernetes/manifests/payment-dep.yaml
+++ b/deploy/kubernetes/manifests/payment-dep.yaml
@@ -28,6 +28,8 @@ spec:
         ports:
         - containerPort: 80
         securityContext:
+          runAsNonRoot: true
+          runAsUser: 10001        
           capabilities:
             drop:
               - all
