--- a/deploy/kubernetes/mushop.yaml
+++ b/deploy/kubernetes/mushop.yaml
@@ -448,6 +448,8 @@ spec:
         ports:
         - containerPort: 80
         securityContext:
+          runAsNonRoot: true
+          runAsUser: 10001
           capabilities:
             drop:
               - all
