--- a/deploy/kubernetes/manifests/shipping-dep.yaml
+++ b/deploy/kubernetes/manifests/shipping-dep.yaml
@@ -14,9 +14,10 @@ spec:
     metadata:
       labels:
         run: shipping
-    spec:  
+    spec:
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/shipping:0.0.4
+      - image: phx.ocir.io/intvravipati/mushop/shipping:1.0.0
+        imagePullPolicy: Always
         name: shipping
         env:
          - name: OCI_TENANT_ID
@@ -34,6 +35,11 @@ spec:
              secretKeyRef:
               name: streams-secret
               key: oci_fingerprint
+         - name: OCI_PASS_PHRASE
+           valueFrom:
+             secretKeyRef:
+              name: streams-secret
+              key: oci_pass_phrase     
          - name: OCI_API_KEY
            valueFrom:
              secretKeyRef:
