--- a/src/shipping/shipping.yaml
+++ b/src/shipping/shipping.yaml
@@ -2,21 +2,22 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    run: ship
-  name: ship
+    run: shipping
+  name: shipping
 spec:
   replicas: 1
   selector:
     matchLabels:
-      run: ship
+      run: shipping
   template:
     metadata:
       labels:
-        run: ship
-    spec:   
+        run: shipping
+    spec:
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/shipping:0.0.4
-        name: ship
+      - image: phx.ocir.io/intvravipati/mushop/shipping:1.0.0
+        imagePullPolicy: Always
+        name: shipping
         env:
          - name: OCI_TENANT_ID
            valueFrom:
@@ -33,6 +34,11 @@ spec:
              secretKeyRef:
               name: streams-secret
               key: oci_fingerprint
+         - name: OCI_PASS_PHRASE
+           valueFrom:
+             secretKeyRef:
+              name: streams-secret
+              key: oci_pass_phrase     
          - name: OCI_API_KEY
            valueFrom:
              secretKeyRef:
@@ -56,8 +62,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: ship
-  name: ship
+    run: shipping
+  name: shipping
 spec:
   ports:
   - port: 80
@@ -65,5 +71,5 @@ spec:
     targetPort: 80
     #nodePort: 30123
   selector:
-    run: ship
+    run: shipping
   type: NodePort
