--- a/src/stream/stream.yaml
+++ b/src/stream/stream.yaml
@@ -13,9 +13,9 @@ spec:
     metadata:
       labels:
         run: stream
-    spec: 
+    spec:
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/stream:0.0.1
+      - image: phx.ocir.io/intvravipati/mushop/stream:1.0.0
         name: stream
         env:
          - name: OCI_TENANT_ID
@@ -33,6 +33,11 @@ spec:
              secretKeyRef:
               name: streams-secret
               key: oci_fingerprint
+         - name: OCI_PASS_PHRASE
+           valueFrom:
+             secretKeyRef:
+              name: streams-secret
+              key: oci_pass_phrase                   
          - name: OCI_API_KEY
            valueFrom:
              secretKeyRef:
