--- a/deploy/kubernetes/ingress/mushop-issuer.yaml
+++ b/deploy/kubernetes/ingress/mushop-issuer.yaml
@@ -8,7 +8,7 @@ spec:
     # The ACME production api URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: "jeevan.g@gmail.com"
+    email: "admin@ateam.cloud"
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
@@ -24,7 +24,7 @@ spec:
     # The ACME server URL
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: "jeevan.g@gmail.com"
+    email: "admin@ateam.cloud"
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-staging
