--- a/deploy/kubernetes/autoscaling/catalogue-hpa.yaml
+++ b/deploy/kubernetes/autoscaling/catalogue-hpa.yaml
@@ -2,12 +2,12 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: api
+  name: catalogue
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: api
+    name: catalogue
   minReplicas: 1
   maxReplicas: 10
   metrics:
