--- a/deploy/kubernetes/manifests/shipping-dep.yaml
+++ b/deploy/kubernetes/manifests/shipping-dep.yaml
@@ -39,7 +39,8 @@ spec:
            valueFrom:
              secretKeyRef:
               name: streams-secret
-              key: oci_pass_phrase     
+              key: oci_pass_phrase
+              optional: true
          - name: OCI_API_KEY
            valueFrom:
              secretKeyRef:
