Fixed image version

--- a/deploy/kubernetes/manifests/stream-dep.yaml
+++ b/deploy/kubernetes/manifests/stream-dep.yaml
@@ -15,7 +15,8 @@ spec:
         run: stream
     spec:
       containers:
-      - image: phx.ocir.io/intvravipati/mushop/stream:0.0.1
+      - image: phx.ocir.io/intvravipati/mushop/stream:1.0.0
+        imagePullPolicy: Always
         name: stream
         env:
          - name: OCI_TENANT_ID
