--- a/deploy/kubernetes/ingress/mushop-dev.yaml
+++ b/deploy/kubernetes/ingress/mushop-dev.yaml
@@ -1,18 +1,14 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: mushop-store
+  name: mushop-dev
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
   - http:
       paths:
-      - path: /api
-        backend:
-          serviceName: api
-          servicePort: 80
       - path: /
         backend:
-          serviceName: storefront
+          serviceName: edge
           servicePort: 80
