--- a/deploy/kubernetes/ingress/mushop-prod.yaml
+++ b/deploy/kubernetes/ingress/mushop-prod.yaml
@@ -17,22 +17,14 @@ spec:
   - host: mushop.ateam.cloud
     http:
       paths:
-      - path: /api
-        backend:
-          serviceName: api
-          servicePort: 80
       - path: /
         backend:
-          serviceName: storefront
+          serviceName: edge
           servicePort: 80
   - host: secure.mushop.ateam.cloud
     http:
       paths:
-      - path: /api
-        backend:
-          serviceName: api
-          servicePort: 80
       - path: /
         backend:
-          serviceName: storefront
+          serviceName: edge
           servicePort: 80
