--- a/deploy/kubernetes/manifests/edge-svc.yaml
+++ b/deploy/kubernetes/manifests/edge-svc.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: storefront
+  name: edge
   labels:
-    name: storefront
+    name: edge
     layer: client
 spec:
   selector:
-    name: storefront
+    name: edge
     layer: client
   ports:
-  - port: 8080
+  - port: 80
     targetPort: 8080
