--- a/deploy/kubernetes/mushop.yaml
+++ b/deploy/kubernetes/mushop.yaml
@@ -1,22 +1,65 @@
 ---
 apiVersion: extensions/v1beta1
-kind: Ingress
+kind: Deployment
 metadata:
-  name: mushop-store
-  annotations:
-    kubernetes.io/ingress.class: nginx
+  name: edge
+  labels:
+    name: edge
+    layer: client
 spec:
-  rules:
-  - http:
-      paths:
-      - path: /api
-        backend:
-          serviceName: api
-          servicePort: 80
-      - path: /
-        backend:
-          serviceName: storefront
-          servicePort: 80
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: edge
+        layer: client
+    spec:
+      containers:
+      - name: edge
+        image: phx.ocir.io/intvravipati/mushop/edge-router:1
+        imagePullPolicy: Always
+        ports:
+        - name: http
+          containerPort: 8080
+        resources:
+          limits:
+            cpu: 100m
+            memory: 1000Mi
+          requests:
+            cpu: 50m
+            memory: 256Mi
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 10001
+          capabilities:
+            drop:
+              - all
+            add:
+              - NET_BIND_SERVICE
+          readOnlyRootFilesystem: true
+        livenessProbe:
+          httpGet:
+            path: /ping
+            port: http
+        readinessProbe:
+          httpGet:
+            path: /ping
+            port: http
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: edge
+  labels:
+    name: edge
+    layer: client
+spec:
+  selector:
+    name: edge
+    layer: client
+  ports:
+  - port: 80
+    targetPort: 8080
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -80,7 +123,7 @@ spec:
     name: api
     layer: client
   ports:
-  - port: 80
+  - port: 3000
     targetPort: 3000
 ---
 apiVersion: extensions/v1beta1
@@ -348,7 +391,7 @@ spec:
     name: storefront
     layer: client
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
 ---
 apiVersion: extensions/v1beta1
