--- a/src/load/load-dep.yaml
+++ b/src/load/load-dep.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: load
         image: phx.ocir.io/intvravipati/mushop/load:1
-        args: ["-h", "api", "-c", "5", "-r", "120"]
+        imagePullPolicy: Always
+        args: ["-h", "edge", "-c", "5", "-r", "120"]
       nodeSelector:
         beta.kubernetes.io/os: linux
