Updated ingress to accept ingress for insecure.mushop

--- a/deploy/kubernetes/ingress/mushop-prod.yaml
+++ b/deploy/kubernetes/ingress/mushop-prod.yaml
@@ -12,7 +12,7 @@ spec:
   - secretName: mushop-tls-prod-secret 
     hosts:
     - mushop.ateam.cloud
-    - secure.mushop.ateam.cloud
+    - insecure.mushop.ateam.cloud
   rules:
   - host: mushop.ateam.cloud
     http:
@@ -21,7 +21,7 @@ spec:
         backend:
           serviceName: edge
           servicePort: 80
-  - host: secure.mushop.ateam.cloud
+  - host: insecure.mushop.ateam.cloud
     http:
       paths:
       - path: /
