--- a/src/orders/config/ojdbc.properties
+++ b/src/orders/config/ojdbc.properties
@@ -3,3 +3,5 @@ oracle.net.tns_admin=./config
 oracle.net.ssl_server_dn_match=true
 javax.net.ssl.trustStore=${TNS_ADMIN}/truststore.jks
 javax.net.ssl.keyStore=${TNS_ADMIN}/keystore.jks
+javax.net.ssl.trustStorePassword=${ATP_TRUST_PASS}
+javax.net.ssl.keyStorePassword=${ATP_KEY_PASS}
